Implement test run for MAIN_MODULE_TEST_PLAIN mode