@@ -23,11 +23,13 @@ class JUnitPlatformConsoleStarter implements IntSupplier {
   @Override
   public int getAsInt() {
     var log = configuration.getLog();
-    var target = Paths.get(configuration.getMavenProject().getBuild().getDirectory());
+    var build = configuration.getMavenProject().getBuild();
+    var target = Paths.get(build.getDirectory());
+    var testClasses = build.getTestOutputDirectory();
     var timeout = configuration.getTimeout().toSeconds();
     var reports = configuration.getReportsPath();
-    var mainMod = world.getTestModuleReference();
-    var testMod = world.getTestModuleReference();
+    var mainModule = world.getMainModuleReference();
+    var testModule = world.getTestModuleReference();
     var errorPath = target.resolve("junit-platform-console-launcher.err.txt");
     var outputPath = target.resolve("junit-platform-console-launcher.out.txt");
 
@@ -43,14 +45,36 @@ class JUnitPlatformConsoleStarter implements IntSupplier {
 
     // Supply standard options for Java
     // https://docs.oracle.com/javase/10/tools/java.htm
-    if (!mainMod.isPresent() && !testMod.isPresent()) {
+    if (world.getMode().equals(ModularMode.MAIN_PLAIN_TEST_PLAIN)) {
       builder.command().add("--class-path");
-      builder.command().add(createModulePathArgument());
+      builder.command().add(createPathArgument());
       builder.command().add("org.junit.platform.console.ConsoleLauncher");
     }
-    if (testMod.isPresent()) {
+    if (mainModule.isPresent() && !testModule.isPresent()) {
+      assert world.getMode() == ModularMode.MAIN_MODULE_TEST_PLAIN;
       builder.command().add("--module-path");
-      builder.command().add(createModulePathArgument());
+      builder.command().add(createPathArgument());
+      builder.command().add("--add-modules");
+      builder.command().add("ALL-MODULE-PATH,ALL-DEFAULT");
+      var name = mainModule.get().descriptor().name();
+      builder.command().add("--patch-module");
+      builder.command().add(name + "=" + testClasses);
+      builder.command().add("--add-reads");
+      builder.command().add(name + "=org.junit.jupiter.api");
+      // all packages, due to
+      // http://mail.openjdk.java.net/pipermail/jigsaw-dev/2017-January/010749.html
+      var packages = mainModule.get().descriptor().packages();
+      packages.forEach(
+          pkg -> {
+            builder.command().add("--add-opens");
+            builder.command().add(name + "/" + pkg + "=org.junit.platform.commons");
+          });
+      builder.command().add("--module");
+      builder.command().add("org.junit.platform.console");
+    }
+    if (testModule.isPresent()) {
+      builder.command().add("--module-path");
+      builder.command().add(createPathArgument());
       builder.command().add("--add-modules");
       builder.command().add("ALL-MODULE-PATH,ALL-DEFAULT");
       builder.command().add("--module");
@@ -75,11 +99,16 @@ class JUnitPlatformConsoleStarter implements IntSupplier {
           builder.command().add(path.toString());
         });
 
-    if (testMod.isPresent()) {
+    if (testModule.isPresent()) {
       builder.command().add("--select-module");
-      builder.command().add(testMod.get().descriptor().name());
+      builder.command().add(testModule.get().descriptor().name());
     } else {
-      builder.command().add("--scan-class-path");
+      if (mainModule.isPresent()) {
+        builder.command().add("--select-module");
+        builder.command().add(mainModule.get().descriptor().name());
+      } else {
+        builder.command().add("--scan-class-path");
+      }
     }
 
     // Start
@@ -110,7 +139,7 @@ class JUnitPlatformConsoleStarter implements IntSupplier {
     return "--config=\"" + key + "\"=\"" + value + "\"";
   }
 
-  private String createModulePathArgument() {
+  private String createPathArgument() {
     var log = configuration.getLog();
     var project = configuration.getMavenProject();
     var elements = new ArrayList<String>();
